# hhvm

./: .code-workspace  clang.nix  common.nix  flake.nix  hhvm.nix  hhvm_clang.nix  nix-build-with-timeout.sh
.github/workflows/: approve.yml  bisect.yml  nix-docker.yml  nix.yml  push-to-hhvm-staging.yml
CMake/: HPHPFindLibs.cmake  HPHPSetup.cmake
hphp/hack/: CMakeLists.txt  dev_env_common.sh.in  opam_setup.sh
hphp/hack/src/dune_config/: discover.ml
hphp/hack/src/heap/: dune
hphp/hack/src/heap/config/: discover.ml  dune
hphp/test/slow/emulate_zend/: argv.php.expectf
