(executable
 (name discover)
 (libraries dune.configurator))

(rule
 (targets library_flags.sexp flags.sexp c_flags.sexp c_library_flags.sexp)
 (deps
  (env_var HACK_EXTRA_INCLUDE_PATHS)
  (env_var HACK_EXTRA_LIB_PATHS)
  (env_var HACK_EXTRA_NATIVE_LIBRARIES)
  (env_var HACK_EXTRA_LINK_OPTS))
 (action
  (run ./discover.exe)))
